REFACTOR: PendingQueue 인터페이스 추출 (#32)
- PendingQueue<T> 제네릭 인터페이스 추출
- PendingIpQueue가 PendingQueue<String> 구현
- IpInfoReader, IpInfoWorker, LogAnalyzer가 인터페이스 의존
- 테스트 용이성 향상 (FakePendingIpQueue 직접 구현 가능)